// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts Items Should able to add from multiple shops 1`] = `
Array [
  Object {
    "deleted": false,
    "id": 1,
    "product": Object {
      "deleted": false,
      "id": 1,
      "name": "MacBook Pro 16 2020",
      "price": 2500,
    },
    "quantity": 1,
    "shop": Object {
      "deleted": false,
      "id": 1,
      "name": "Putra Mahkota",
    },
    "subTotal": 2500,
  },
  Object {
    "deleted": false,
    "id": 2,
    "product": Object {
      "deleted": false,
      "id": 4,
      "name": "MacBook Pro 16 2020",
      "price": 2100,
    },
    "quantity": 1,
    "shop": Object {
      "deleted": false,
      "id": 2,
      "name": "Ali Shop",
    },
    "subTotal": 2100,
  },
]
`;

exports[`Charts Items Should add item properly 1`] = `
Array [
  Object {
    "deleted": false,
    "id": 1,
    "product": Object {
      "deleted": false,
      "id": 1,
      "name": "MacBook Pro 16 2020",
      "price": 2500,
    },
    "quantity": 1,
    "shop": Object {
      "deleted": false,
      "id": 1,
      "name": "Putra Mahkota",
    },
    "subTotal": 2500,
  },
  Object {
    "deleted": false,
    "id": 2,
    "product": Object {
      "deleted": false,
      "id": 2,
      "name": "Li-Ion Battery",
      "price": 250,
    },
    "quantity": 2,
    "shop": Object {
      "deleted": false,
      "id": 1,
      "name": "Putra Mahkota",
    },
    "subTotal": 500,
  },
  Object {
    "deleted": false,
    "id": 3,
    "product": Object {
      "deleted": false,
      "id": 3,
      "name": "M3 SSD 1TB",
      "price": 900,
    },
    "quantity": 2,
    "shop": Object {
      "deleted": false,
      "id": 1,
      "name": "Putra Mahkota",
    },
    "subTotal": 1800,
  },
]
`;

exports[`Charts Items Should merge item quantity when added twice 1`] = `
Array [
  Object {
    "deleted": false,
    "id": 1,
    "product": Object {
      "deleted": false,
      "id": 1,
      "name": "MacBook Pro 16 2020",
      "price": 2500,
    },
    "quantity": 5,
    "shop": Object {
      "deleted": false,
      "id": 1,
      "name": "Putra Mahkota",
    },
    "subTotal": 12500,
  },
]
`;
